Rename AAD to Entra in docs

--- a/docs/docs/cmd/app/permission/permission-add.mdx
+++ b/docs/docs/cmd/app/permission/permission-add.mdx
@@ -14,7 +14,7 @@ m365 app permission add [options]
 
 ```md definition-list
 `--appId [appId]`
-: Client ID of the Azure AD app registered in the .m365rc.json file to retrieve API permissions for.
+: Client ID of the Microsoft Entra ID app registered in the .m365rc.json file to retrieve API permissions for.
 
 `--applicationPermission [applicationPermission]`
 : Space-separated list of application permissions to add.
