--- a/docs/docs/cmd/entra/approleassignment/approleassignment-list.mdx
+++ b/docs/docs/cmd/entra/approleassignment/approleassignment-list.mdx
@@ -59,7 +59,7 @@ m365 entra approleassignment list --appObjectId b2307a39-e878-458b-bc90-03bc5785
 
 ## More information
 
-- Application and service principal objects in Entra ID (Azure AD): [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
+- Application and service principal objects in Microsoft Entra ID: [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
 
 ## Response
 
