--- a/docs/docs/cmd/login.mdx
+++ b/docs/docs/cmd/login.mdx
@@ -34,10 +34,10 @@ m365 login [options]
 : Certificate thumbprint. If not specified, and `authType` is set to `certificate`, it will be automatically calculated based on the specified certificate
 
 `-s, --secret [secret]`
-: Client Secret of the Azure AD application to use for authentication. Required when `authType` is set to `secret`.
+: Client Secret of the Microsoft Entra IDt Entra IDt Entra IDt Entra IDt Entra IDt Entra IDt Entra ID application to use for authentication. Required when `authType` is set to `secret`.
 
 `--appId [appId]`
-: App ID of the Azure AD application to use for authentication. If not specified, use the app specified in the `CLIMICROSOFT365_AADAPPID` environment variable. If the environment variable is not defined, use the multitenant PnP Management Shell app
+: App ID of the Microsoft Entra ID application to use for authentication. If not specified, use the app specified in the `CLIMICROSOFT365_AADAPPID` environment variable. If the environment variable is not defined, use the multitenant PnP Management Shell app
 
 `--tenant [tenant]`
 : ID of the tenant from which accounts should be able to authenticate. Use `common` or `organization` if the app is multitenant. If not specified, use the tenant specified in the `CLIMICROSOFT365_TENANT` environment variable. If the environment variable is not defined, use `common` as the tenant identifier
@@ -61,11 +61,11 @@ When logging in to Microsoft 365 using the user name and password, next to the a
 
 When logging in to Microsoft 365 using a certificate, the CLI for Microsoft 365 will store the contents of the certificate so that it can automatically re-authenticate if necessary. The contents of the certificate are removed by re-authenticating using the device code or by calling the [logout](logout.mdx) command.  
 
-To log in to Microsoft 365 using a certificate or secret, you will typically [create a custom Azure AD application](../user-guide/using-own-identity.mdx). To use this application with the CLI for Microsoft 365, you will set the `CLIMICROSOFT365_AADAPPID` environment variable to the application's ID and the `CLIMICROSOFT365_TENANT` environment variable to the ID of the Azure AD tenant, where you created the Azure AD application. Also, please make sure to read about [the caveats when using the certificate login option](../user-guide/cli-certificate-caveats.mdx).
+To log in to Microsoft 365 using a certificate or secret, you will typically [create a custom Microsoft Entra IDt Entra IDt Entra IDt Entra ID application](../user-guide/using-own-identity.mdx). To use this application with the CLI for Microsoft 365, you will set the `CLIMICROSOFT365_AADAPPID` environment variable to the application's ID and the `CLIMICROSOFT365_TENANT` environment variable to the ID of the Microsoft Entra ID tenant, where you created the Microsoft Entra ID application. Also, please make sure to read about [the caveats when using the certificate login option](../user-guide/cli-certificate-caveats.mdx).
 
 Managed identity in Azure Cloud Shell is the identity of the user. It is neither system- nor user-assigned and it can't be configured. To log in to Microsoft 365 using managed identity in Azure Cloud Shell, set `authType` to `identity` and don't specify the `userName` option.
 
-When connecting to clouds other than `Public`, you'll need to use an Azure AD application registered in a directory provisioned in that cloud. If you try to login using the default Azure AD application, login will fail.
+When connecting to clouds other than `Public`, you'll need to use an Microsoft Entra IDt Entra ID application registered in a directory provisioned in that cloud. If you try to login using the default Microsoft Entra IDt Entra IDt Entra ID application, login will fail.
 
 :::tip
 
@@ -160,19 +160,19 @@ Log in to Microsoft 365 using a user-assigned managed identity. Client id or pri
 m365 login --authType identity --userName ac9fbed5-804c-4362-a369-21a4ec51109e
 ```
 
-Log in to Microsoft 365 using your own multitenant Azure AD application
+Log in to Microsoft 365 using your own multitenant Microsoft Entra ID application
 
 ```sh
 m365 login --appId 31359c7f-bd7e-475c-86db-fdb8c937548c
 ```
 
-Log in to Microsoft 365 using your own Azure AD application that's restricted only to allow accounts from the specific tenant
+Log in to Microsoft 365 using your own Microsoft Entra ID application that's restricted only to allow accounts from the specific tenant
 
 ```sh
 m365 login --appId 31359c7f-bd7e-475c-86db-fdb8c937548c --tenant 31359c7f-bd7e-475c-86db-fdb8c937548a
 ```
 
-Log in to Microsoft 365 using your own Azure AD application and a personal information exchange (.pfx) file
+Log in to Microsoft 365 using your own Microsoft Entra ID application and a personal information exchange (.pfx) file
 
 ```sh
 m365 login --authType certificate --appId 31359c7f-bd7e-475c-86db-fdb8c937548c --tenant 31359c7f-bd7e-475c-86db-fdb8c937548a --certificateFile /Users/user/dev/localhost.pfx --password 'pass@word1'
