--- a/docs/docs/cmd/entra/app/app-permission-add.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-add.mdx
@@ -23,10 +23,13 @@ m365 entra appregistration permission add [options]
 
 ```md definition-list
 `-i, --appId [appId]`
-: Client ID of the Microsoft Entra app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
+: Client ID of the Microsoft Entra app to add the API permissions to. Specify either `appId`, `appName` or `appObjectId`.
+
+`-n, --appName [appName]`
+: Display name of the Microsoft Entra app to add the API permissions to. Specify either `appId`, `appName` or `appObjectId`.
 
 `--appObjectId [appObjectId]`
-: Object ID of the Microsoft Entra app to add the API permissions to. Specify `appId` or `appObjectId` but not both.
+: Object ID of the Microsoft Entra app to add the API permissions to. Specify either `appId`, `appName` or `appObjectId`.
 
 `-a, --applicationPermissions [applicationPermissions]`
 : Space-separated list of application permissions to add. Specify at least `applicationPermissions` or `delegatedPermissions`.
@@ -58,10 +61,10 @@ Grant multiple delegated API permissions to a Microsoft Entra app specified by o
 m365 entra app permission add --appObjectId 'e0306bb2-bf0b-4cc5-a845-a0b2cf11f690' --delegatedPermissions 'https://management.azure.com/user_impersonation https://service.flow.microsoft.com/Flows.Read.All https://graph.microsoft.com/Agreement.Read.All'
 ```
 
-Grant multiple app-only permissions to a Microsoft Entra app specified by client id and grant admin consent.
+Grant multiple app-only permissions to a Microsoft Entra app specified by app display name and grant admin consent.
 
 ```sh
-m365 entra app permission add --appId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --applicationPermissions 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grantAdminConsent
+m365 entra app permission add --appName 'Contoso App' --applicationPermissions 'https://graph.microsoft.com/Sites.FullControl.All https://microsoft.sharepoint-df.com/Sites.FullControl.All' --grantAdminConsent
 ```
 
 ## Response
