--- a/docs/docs/cmd/app/permission/permission-add.mdx
+++ b/docs/docs/cmd/app/permission/permission-add.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # app permission add
 
-Adds the specified application and/or delegated permissions to the current AAD app API permissions
+Adds the specified application and/or delegated permissions to the current Microsoft Entra app API permissions
 
 ## Usage
 
@@ -14,7 +14,7 @@ m365 app permission add [options]
 
 ```md definition-list
 `--appId [appId]`
-: Client ID of the Microsoft Entra ID app registered in the .m365rc.json file to retrieve API permissions for.
+: Client ID of the Microsoft Entra app registered in the .m365rc.json file to retrieve API permissions for.
 
 `--applicationPermission [applicationPermission]`
 : Space-separated list of application permissions to add.
