--- a/docs/docs/cmd/external/connection/connection-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-add.mdx
@@ -29,7 +29,7 @@ m365 search externalconnection add
 : Description of the connection displayed in the Microsoft 365 admin center.
 
 `--authorizedAppIds [authorizedAppIds]`
-: Comma-separated collection of application IDs for registered Microsoft Entra ID apps that are allowed to manage the external connection and to index content in the external connection.
+: Comma-separated collection of application IDs for registered Microsoft Entra apps that are allowed to manage the external connection and to index content in the external connection.
 ```
 
 <Global />
