--- a/docs/docs/cmd/graph/schemaextension/schemaextension-set.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-set.mdx
@@ -17,7 +17,7 @@ m365 graph schemaextension set [options]
 : The unique identifier for the schema extension definition
 
 `--owner <owner>`
-: The ID of the Microsoft Entra ID application that is the owner of the schema extension
+: The ID of the Microsoft Entra application that is the owner of the schema extension
 
 `-d, --description [description]`
 : Description of the schema extension
