--- a/docs/docs/cmd/spo/group/group-member-remove.mdx
+++ b/docs/docs/cmd/spo/group/group-member-remove.mdx
@@ -35,7 +35,7 @@ m365 spo group member remove [options]
 : The object Id of the Entra group to remove as a member. Specify either `userName`, `email`, `userId`, `aadGroupId`, `entraGroupId`, `aadGroupName`, or `entraGroupName`.
 
 `--aadGroupId [aadGroupId]`
-: (deprecated. Use `entraGroupId` instead) The object Id of the Microsoft Entra ID group to remove as a member. Specify either `userName`, `email`, `userId`, `aadGroupId`, `entraGroupId`, `aadGroupName`, or `entraGroupName`.
+: (deprecated. Use `entraGroupId` instead) The object ID of the Microsoft Entra group to remove as a member. Specify either `userName`, `email`, `userId`, `aadGroupId`, `entraGroupId`, `aadGroupName`, or `entraGroupName`.
 
 `--entraGroupName [entraGroupName]`
 : The name of the Entra group to remove as a member. Specify either `userName`, `email`, `userId`, `aadGroupId`, `entraGroupId`, `aadGroupName`, or `entraGroupName`.
