--- a/docs/docs/cmd/viva/engage/engage-user-get.mdx
+++ b/docs/docs/cmd/viva/engage/engage-user-get.mdx
@@ -28,7 +28,7 @@ m365 viva engage user get [options]
 
 :::warning
 
-In order to use this command, you need to grant the Microsoft Entra ID application used by the CLI for Microsoft 365 the permission to the Viva Engage API. To do this, execute the `cli consent --service VivaEngage` command.
+In order to use this command, you need to grant the Microsoft Entra application used by the CLI for Microsoft 365 the permission to the Viva Engage API. To do this, execute the `cli consent --service VivaEngage` command.
 
 :::
 
