--- a/docs/docs/cmd/cli/cli-reconsent.mdx
+++ b/docs/docs/cmd/cli/cli-reconsent.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # cli reconsent
 
-Returns Microsoft Entra ID URL to open in the browser to re-consent CLI for Microsoft 365 permissions
+Returns Microsoft Entra URL to open in the browser to re-consent CLI for Microsoft 365 permissions
 
 ## Usage
 
@@ -30,28 +30,28 @@ m365 cli reconsent
   <TabItem value="JSON">
 
   ```json
-  "To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra ID application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent"
+  "To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent"
   ```
 
   </TabItem>
   <TabItem value="Text">
 
   ```text
-  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra ID application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
+  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
   ```
 
   </TabItem>
   <TabItem value="CSV">
 
   ```csv
-  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra ID application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
+  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
   ```
 
   </TabItem>
   <TabItem value="Markdown">
 
   ```md
-  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra ID application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
+  To re-consent the PnP Microsoft 365 Management Shell Microsoft Entra application navigate in your web browser to https://login.microsoftonline.com/common/oauth2/authorize?client_id=31359c7f-bd7e-475c-86db-fdb8c937548e&response_type=code&prompt=admin_consent
   ```
 
   </TabItem>
@@ -59,4 +59,4 @@ m365 cli reconsent
 
 ## More information
 
-- Re-consent the PnP Microsoft 365 Management Shell Microsoft Entra ID application: [https://pnp.github.io/cli-microsoft365/user-guide/connecting-office-365/#re-consent-the-pnp-office-365-management-shell-azure-ad-application](https://pnp.github.io/cli-microsoft365/user-guide/connecting-office-365/#re-consent-the-pnp-office-365-management-shell-azure-ad-application)
+- Re-consent the PnP Microsoft 365 Management Shell Microsoft Entra application: [https://pnp.github.io/cli-microsoft365/user-guide/connecting-office-365/#re-consent-the-pnp-office-365-management-shell-azure-ad-application](https://pnp.github.io/cli-microsoft365/user-guide/connecting-office-365/#re-consent-the-pnp-office-365-management-shell-azure-ad-application)
