--- a/docs/docs/user-guide/using-own-identity.mdx
+++ b/docs/docs/user-guide/using-own-identity.mdx
@@ -5,19 +5,19 @@ sidebar_position: 10
 
 # Use your own Microsoft Entra ID identity
 
-When you use the CLI for Microsoft 365 to connect to your tenant for the first time, you are presented with a `Permissions requested` prompt from Azure, by accepting this prompt you are consenting to using the `PnP Microsoft 365 Management Shell` Microsoft Entra ID application with your tenant as well as the permissions that it requires.
+When you use the CLI for Microsoft 365 to connect to your tenant for the first time, you are presented with a `Permissions requested` prompt from Azure, by accepting this prompt you are consenting to using the `PnP Microsoft 365 Management Shell` Microsoft Entra application with your tenant as well as the permissions that it requires.
 
 We ask for a wide range to permissions upfront, including permissions that require administrative level consent, so that it is easy to get started with the CLI and try out the commands across many CLI for Microsoft 365 workloads in your tenant without having to handle the complexity of managing the permissions for the different commands manually in Azure.
 
 Whilst this is fine for working against development and test environments, using these levels of permissions against production environments is inconvenient and administrators are not comfortable with granting such permissions to a multi-tenant application within their environment.
 
-In this scenario, administrators will want to provide their own Microsoft Entra ID app registration to use with the CLI to enable greater control over the permissions that are granted.
+In this scenario, administrators will want to provide their own Microsoft Entra app registration to use with the CLI to enable greater control over the permissions that are granted.
 
-This tutorial will walk you through how to create your own Microsoft Entra ID application with permissions restricted to only read information about SharePoint Online Site Collections and how to use this custom application with the CLI for Microsoft 365.
+This tutorial will walk you through how to create your own Microsoft Entra application with permissions restricted to only read information about SharePoint Online Site Collections and how to use this custom application with the CLI for Microsoft 365.
 
-## Register Microsoft Entra ID application in your tenant
+## Register Microsoft Entra application in your tenant
 
-We first need to register a new Microsoft Entra ID application in your tenant, to do this we will need to navigate to the [Azure Portal](https://portal.azure.com).
+We first need to register a new Microsoft Entra application in your tenant, to do this we will need to navigate to the [Azure Portal](https://portal.azure.com).
 
 Select `Microsoft Entra ID` from the global menu, select `App registrations` in the Microsoft Entra ID blade and then select the `New registration` action button to open the `Register an application` form.
 
