--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -13,10 +13,18 @@ sidebar_position: 4
 - [purview threatassessment add](../cmd/purview/threatassessment/threatassessment-add.mdx) - creates a threat assessment [#4428](https://github.com/pnp/cli-microsoft365/issues/4428)
 - [purview threatassessment list](../cmd/purview/threatassessment/threatassessment-list.mdx) - get a list of threat assessments [#4426](https://github.com/pnp/cli-microsoft365/issues/4426)
 
+**SharePoint Framework:**
+
+- [spfx project azuredevops pipeline add](../cmd/spfx/project/project-azuredevops-pipeline-add) - adds a Azure DevOps pipeline for a SharePoint Framework project [#5763](https://github.com/pnp/cli-microsoft365/issues/5763)
+
 ### Changes
 
 - refactored 'auth' and 'chili' files to async/await. [#5145](https://github.com/pnp/cli-microsoft365/issues/5145)
 - refactored 'cli' files to async/await. [#5146](https://github.com/pnp/cli-microsoft365/issues/5146)
+- updated docs dependencies.
+- fixed retrieving new app only access token. [#5891](https://github.com/pnp/cli-microsoft365/issues/5891)
+- added new script sample to generate the retirement report. [#5774](https://github.com/pnp/cli-microsoft365/issues/5774)
+- added more options to 'spo user remove'. [#5522](https://github.com/pnp/cli-microsoft365/issues/5522)
 
 ## [v7.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.5.0)
 
