--- a/docs/docs/cmd/entra/app/app-set.mdx
+++ b/docs/docs/cmd/entra/app/app-set.mdx
@@ -49,6 +49,9 @@ m365 entra appregistration set [options]
 
 `--certificateDisplayName [certificateDisplayName]`
 : Display name for the certificate. If not given, the displayName will be set to the certificate subject. When specified, also specify either `certificateFile` or `certificateBase64Encoded`.
+
+`--allowPublicClientFlows [allowPublicClientFlows]`
+: Set to `true` or `false` to toggle the allow public client flows feature on the app registration.
 ```
 
 <Global />
@@ -97,6 +100,12 @@ Add a certificate to the app
 
 ```sh
 m365 entra app set --appId e75be2e1-0204-4f95-857d-51a37cf40be8 --certificateDisplayName "Some certificate name" --certificateFile "c:\temp\some-certificate.cer"
+```
+
+Enable the allow public client flows feature on the app registration
+
+```sh
+m365 entra app set --appId e75be2e1-0204-4f95-857d-51a37cf40be8 --allowPublicClientFlows true
 ```
 
 ## Response
